@@ -19,6 +19,14 @@ CHANGES
     happen if there's really an UPDATE to occur.
     [ticket:2390]
 
+- engine
+  - [feature] Added pool_reset_on_return argument
+    to create_engine, allows control over 
+    "connection return" behavior.  Also added
+    new arguments 'rollback', 'commit', None
+    to pool.reset_on_return to allow more control
+    over connection return activity. [ticket:2378]
+
 0.7.5 (January 28, 2012)
 =====
 - orm
